--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000"/>
     <meta name="description" content="Web site created using create-react-app"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
-    <title>Random Book Selector</title>
+    <title>Book Randomizer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
